--- a/src/app/category-details/category-details.component.scss
+++ b/src/app/category-details/category-details.component.scss
@@ -6,3 +6,11 @@
 .category-text {
     font-size: 17px;
 }
+
+.categoryChoose {
+    font-size: 22px;
+    span {
+        text-transform: uppercase;
+        color: rgb(167, 61, 61);
+    }
+}
